--- a/package.json
+++ b/package.json
@@ -26,7 +26,6 @@
   "dependencies": {
     "carbon-components-svelte": "^0.85.0",
     "carbon-icons-svelte": "^12.6.0",
-    "fuse.js": "^7.0.0",
-    "rollup": "^4.19.1"
+    "fuse.js": "^7.0.0"
   }
 }
